# SnowTeamTest

./: .gitignore  .gitmodules  README.md  TODO.md
1_cropping_s3/: .gitignore  .gitmodules  CMakeLists.txt  README.md
1_cropping_s3/src/: main.cpp
1_cropping_s3/src/crop_filter/: crop_filter.cpp  crop_filter.h
2_matching/: .gitignore  ConfigExamples.txt  Makefile  config.json
2_matching/python/: README.md  matchOutputs.py  matchingCode.py  utils.py
2_matching/src/: fundamentalMatrix.cc  fundamentalMatrix.h  main.cc  matchingCode.cc  matchingCode.h  utils.cc  utils.h
3_psd/: python_output.txt  utils_psd.cc  utils_psd_module_testing.cc
4_sorting/: sortFlakesFromMatching.py
opencv/: build.sh  options.txt
